# qql

./: CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
docs/: architecture.md  config-schema.md  demo.tape  qq.sh
src/: app.rs  claude.rs  cli.rs  config.rs  gemini.rs  history.rs  init.rs  lib.rs  main.rs  openai.rs  provider.rs
tests/: app.rs
