[package]
name = "qql"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
